<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@color/colorLayoutBackground"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/layout_space_10dp"
    android:paddingLeft="@dimen/layout_space_10dp"
    android:paddingRight="@dimen/layout_space_10dp"
    android:paddingStart="@dimen/layout_space_10dp">

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/song_image_later_desc"
        android:src="@drawable/cimo_never_give_up" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/layout_space_10dp"
        android:layout_marginRight="@dimen/layout_space_10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="@string/cimo_armin_van_buuren_name" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/colorArtistName"
            android:textSize="14sp"
            tools:text="@string/cimo_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            tools:text="@string/cimo_never_give_up_time" />

        <ImageView
            android:id="@+id/audio_wave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/audio_wave_image_desc"
            android:src="@drawable/audio_wave" />

    </LinearLayout>

</LinearLayout>