<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/grid_item_height"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/grid_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorLayoutBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/album_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/album_image"
                android:scaleType="centerCrop"
                android:src="@drawable/tamer_album" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/ic_play_album"
                android:src="@drawable/ic_play_circle_filled" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom|left"
                android:paddingLeft="16dp"
                android:text="@string/tamer_album_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|left"
                android:paddingLeft="14dp"
                android:text="@string/tamer_name"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/buy_music_online"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|right"
                android:paddingRight="@dimen/layout_space_10dp"
                android:text="@string/buy_music_online"
                android:textColor="@color/colorBuyMusicOnline" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>