<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <ImageView
                android:id="@+id/song_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/song_image_now_playing_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/relax_album" />


            <TextView
                android:id="@+id/song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/artist_name"
                android:paddingLeft="16dp"
                android:text="@string/pimms_brighter_day_name"
                android:textColor="@android:color/white"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:text="@string/pimms_name"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="12dp">

                <ImageView
                    android:id="@+id/iv_songs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/ic_queue_music_desc"
                    android:src="@drawable/ic_queue_music" />

            </FrameLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_space_2dp"
            android:paddingRight="@dimen/layout_space_2dp"
            android:paddingTop="16dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/ly_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/cimo_never_give_up" />

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/tamer_hes_bsoak" />

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/sherine_forsa_ahera" />

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/delacey_dream_it_possible" />

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/sherine_mashair" />

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/pimms_brighter_day" />

                    <ImageView
                        style="@style/NowPlayingStyleHorizontalImages"
                        android:contentDescription="@string/song_image_later_desc"
                        android:src="@drawable/tamer_tman_ekhtiar" />

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="00:01"
                    android:textColor="@android:color/white" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/song_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pimms_brighter_day_time"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/layout_space_10dp"
                android:paddingRight="@dimen/layout_space_10dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/ic_repeat_music"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_repeat_white_36dp" />


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/ic_skip_previous_music"
                    android:src="@drawable/ic_skip_previous_white_36dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:contentDescription="@string/ic_play_music"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_play_arrow_white_48dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/ic_skip_next_music"
                    android:src="@drawable/ic_skip_next_white_36dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/ic_shuffle_music"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@drawable/ic_shuffle_white_36dp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/song_wave_image"
            android:src="@drawable/sound_level" />

    </LinearLayout>

</ScrollView>
